# dynamous-hackathon

./: AGENTS.md  CLAUDE.md  Hackathon.md  README.md  blog-post-draft.md  prime-prompt.md
.claude/commands/: frontend-design.md  log.md
apps/user-management/: README.md  main.py  models.py  pyproject.toml  routes.py
apps/web/: README.md  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
dev/: devlog.md
dev/logs/: session-001.md
features/: FEATURE-TEMPLATE.md
